--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
-		<members>MrJCRM__BATCH_ExportEmailAlerts</members>
-		<members>MrJCRM__BATCH_ExportEmailAlertsMockHTTP</members>
-		<members>MrJCRM__BATCH_ExportEmailAlertsTEST</members>
+		<members>BATCH_ExportEmailAlerts</members>
+		<members></members>
+		<members>BATCH_ExportEmailAlertsTEST</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
@@ -11,11 +11,11 @@
 		<name>CustomTab</name>
 	</types>
 	<types>
-		<members>MrJCRM__Export_Email_Alerts</members>
+		<members>Export_Email_Alerts</members>
 		<name>FlexiPage</name>
 	</types>
 	<types>
-		<members>MrJCRM__Export_email_alerts</members>
+		<members>Export_email_alerts</members>
 		<name>Flow</name>
 	</types>
 	<version>65.0</version>
