2026-02-20 Fine-tune beta 2

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,7 +1,7 @@
 {
   "packageDirectories": [
     {
-      "versionNumber": "1.2.0.0",
+      "versionNumber": "1.2.1.NEXT",
       "path": "force-app",
       "package": "Export Email Alerts",
       "versionDescription": "List all email alerts in CSV format"
@@ -13,6 +13,8 @@
   "packageAliases": {
     "Export Email Alerts": "0Hoak0000001E8zCAE",
     "Export Email Alerts@1.1.0": "04tak000000NVG1AAO",
-    "Export Email Alerts@1.2.0": "04tak000000NVRJAA4"
+    "Export Email Alerts@1.2.0": "04tak000000NVRJAA4",
+    "Export Email Alerts@1.2.1-1": "04tak000000Ng8DAAS",
+    "Export Email Alerts@1.2.1-2": "04tak000000NgTBAA0"
   }
 }
