--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,7 +1,7 @@
 {
   "packageDirectories": [
     {
-      "versionNumber": "1.2.1.NEXT",
+      "versionNumber": "1.3.0.1",
       "path": "force-app",
       "package": "Export Email Alerts",
       "versionDescription": "List all email alerts in CSV format"
@@ -15,6 +15,7 @@
     "Export Email Alerts@1.1.0": "04tak000000NVG1AAO",
     "Export Email Alerts@1.2.0": "04tak000000NVRJAA4",
     "Export Email Alerts@1.2.1-1": "04tak000000Ng8DAAS",
-    "Export Email Alerts@1.2.1-2": "04tak000000NgTBAA0"
+    "Export Email Alerts@1.2.1-2": "04tak000000NgTBAA0",
+    "Export Email Alerts@1.3.0-1": "04tak000000Nnw5AAC"
   }
 }
